--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "nuxt": "^3.10.2",
-    "vue": "^3.4.19",
-    "vue-router": "^4.2.5",
     "@pinia/nuxt": "^0.5.1",
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
-    "pinia": "^2.1.7"
+    "nuxt": "^3.10.2",
+    "pinia": "^2.1.7",
+    "vue": "^3.4.19",
+    "vue-router": "^4.2.5"
   }
 }
