--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/auth-next": "^5.0.0-1667386184.dfbbb54",
+    "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.5.1",
+    "@sidebase/nuxt-auth": "^0.6.7",
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
+    "next-auth": "^4.24.6",
     "nuxt": "^3.10.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.19",
